--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "scripts": {
         "start": "ng serve ngx-material-tracking-showcase",
         "build": "ng build ngx-material-tracking",
+        "build:prod": "run-s build copyToDist",
         "watch": "ng build ngx-material-tracking --watch --configuration development",
+        "copyToDist": "run-s copyToDist:readme copyToDist:license",
+        "copyToDist:readme": "ncp ./README.md ./dist/ngx-material-tracking/README.md",
+        "copyToDist:license": "ncp ./LICENSE.md ./dist/ngx-material-tracking/LICENSE.md",
         "test": "ng test",
         "lint": "eslint projects --report-unused-disable-directives --max-warnings 0",
         "lint:fix": "eslint projects --fix"
@@ -37,6 +41,8 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.0.0",
+        "ncp": "^2.0.0",
+        "npm-run-all": "^4.1.5",
         "ng-packagr": "^14.2.1",
         "typescript": "~4.8.3"
     }
