--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "lint:fix": "eslint projects --fix"
     },
     "private": true,
+    "type": "module",
     "dependencies": {
         "@angular/animations": "~16.2.0",
         "@angular/cdk": "^16.2.0",
@@ -34,7 +35,7 @@
         "@angular/cli": "~16.2.0",
         "@angular/compiler-cli": "~16.2.0",
         "@types/jasmine": "~4.3.5",
-        "eslint-config-service-soft": "^1.1.0",
+        "eslint-config-service-soft": "^1.2.0",
         "jasmine-core": "~5.1.0",
         "karma": "~6.4.2",
         "karma-chrome-launcher": "~3.2.0",
@@ -42,8 +43,8 @@
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
         "ncp": "^2.0.0",
-        "npm-run-all": "^4.1.5",
         "ng-packagr": "^16.2.0",
+        "npm-run-all": "^4.1.5",
         "typescript": "~5.1.6"
     }
 }
