--- a/projects/ngx-material-tracking/tsconfig.spec.json
+++ b/projects/ngx-material-tracking/tsconfig.spec.json
@@ -1,15 +1,11 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "../../out-tsc/spec",
-        "types": [
-            "jasmine"
-        ]
+        "types": ["jasmine"]
     },
-    "files": [
-        "src/test.ts"
-    ],
+    "extends": "../../tsconfig.json",
+    "files": ["src/test.ts"],
     "include": [
         "**/*.spec.ts",
         "**/*.d.ts"
