--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,46 @@
 {
-    "compileOnSave": false,
-    "ts-node": {
-        // these options are overrides used only by ts-node
-        "compilerOptions": {
-            "module": "commonjs"
-        }
+    "angularCompilerOptions": {
+        "enableI18nLegacyMessageIdFormat": false,
+        "strictInjectionParameters": true,
+        "strictInputAccessModifiers": true,
+        "strictTemplates": true
     },
+    "compileOnSave": false,
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
         "baseUrl": "./",
-        "outDir": "./dist/out-tsc",
+        "declaration": false,
+        "downlevelIteration": true,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "noImplicitOverride": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "noImplicitReturns": true,
+        "importHelpers": true,
+        "lib": [
+            "ES2022",
+            "dom"
+        ],
+        "module": "es2022",
+        "moduleResolution": "node",
         "noFallthroughCasesInSwitch": false,
-        "sourceMap": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "outDir": "./dist/out-tsc",
         "paths": {
             "ngx-material-tracking": [
                 "dist/ngx-material-tracking/ngx-material-tracking",
                 "dist/ngx-material-tracking"
             ]
         },
-        "declaration": false,
-        "downlevelIteration": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "module": "es2022",
-        "moduleResolution": "node",
-        "importHelpers": true,
-        "target": "es2022",
-        "lib": [
-            "ES2022",
-            "dom"
-        ],
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
+        "sourceMap": true,
+        "strict": true,
+        "target": "es2022"
     },
-    "angularCompilerOptions": {
-        "enableI18nLegacyMessageIdFormat": false,
-        "strictInjectionParameters": true,
-        "strictInputAccessModifiers": true,
-        "strictTemplates": true
+    "ts-node": {
+        // these options are overrides used only by ts-node
+        "compilerOptions": {
+            "module": "commonjs"
+        }
     }
 }
