--- a/projects/ngx-material-tracking/tsconfig.spec.json
+++ b/projects/ngx-material-tracking/tsconfig.spec.json
@@ -2,7 +2,7 @@
 {
     "compilerOptions": {
         "outDir": "../../out-tsc/spec",
-        "types": ["jasmine"]
+        "types": []
     },
     "extends": "../../tsconfig.json",
     "files": ["src/test.ts"],
