removed dependency on material

--- a/package.json
+++ b/package.json
@@ -11,20 +11,18 @@
         "copyToDist": "run-s copyToDist:readme copyToDist:license",
         "copyToDist:readme": "ncp ./README.md ./dist/ngx-material-tracking/README.md",
         "copyToDist:license": "ncp ./LICENSE.md ./dist/ngx-material-tracking/LICENSE.md",
-        "lint": "eslint ./ --max-warnings 0",
-        "lint:fix": "eslint ./ --fix",
+        "lint": "eslint . --max-warnings 0",
+        "lint:fix": "eslint . --max-warnings 0 --fix",
         "clear:dist": "rimraf dist/ngx-material-tracking",
         "waitOn:build": "wait-on dist/ngx-material-tracking"
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~20.2.1",
         "@angular/cdk": "^20.2.0",
         "@angular/common": "~20.2.1",
         "@angular/compiler": "~20.2.1",
         "@angular/core": "~20.2.1",
         "@angular/forms": "~20.2.1",
-        "@angular/material": "^20.2.0",
         "@angular/platform-browser": "~20.2.1",
         "@angular/platform-browser-dynamic": "~20.2.1",
         "@angular/router": "~20.2.1",
